--- a/index.html
+++ b/index.html
@@ -27,37 +27,37 @@ the grandson of Ea.&quot;</p>
 <div class="contents topic">
 <p class="topic-title first"><a id="contents" name="contents">Contents</a></p>
 <ul class="simple">
-<li><a class="reference" href="#description" id="id5" name="id5">Description</a><ul>
-<li><a class="reference" href="#example-extracting-contact-info" id="id6" name="id6">Example: Extracting Contact Info</a></li>
-<li><a class="reference" href="#example-blogging-system" id="id7" name="id7">Example: Blogging System</a></li>
-<li><a class="reference" href="#example-automatic-bookmarks-list" id="id8" name="id8">Example: Automatic Bookmarks List</a></li>
-<li><a class="reference" href="#example-shared-events-calendar" id="id9" name="id9">Example: Shared Events Calendar</a></li>
-<li><a class="reference" href="#customizability-writing-extractors" id="id10" name="id10">Customizability: Writing Extractors</a></li>
-<li><a class="reference" href="#target-audience" id="id11" name="id11">Target Audience</a></li>
+<li><a class="reference" href="#description" id="id4" name="id4">Description</a><ul>
+<li><a class="reference" href="#example-extracting-contact-info" id="id5" name="id5">Example: Extracting Contact Info</a></li>
+<li><a class="reference" href="#example-blogging-system" id="id6" name="id6">Example: Blogging System</a></li>
+<li><a class="reference" href="#example-automatic-bookmarks-list" id="id7" name="id7">Example: Automatic Bookmarks List</a></li>
+<li><a class="reference" href="#example-shared-events-calendar" id="id8" name="id8">Example: Shared Events Calendar</a></li>
+<li><a class="reference" href="#customizability-writing-extractors" id="id9" name="id9">Customizability: Writing Extractors</a></li>
+<li><a class="reference" href="#target-audience" id="id10" name="id10">Target Audience</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#features" id="id12" name="id12">Features</a><ul>
-<li><a class="reference" href="#nabu-is-not" id="id13" name="id13">Nabu is not ...</a></li>
+<li><a class="reference" href="#features" id="id11" name="id11">Features</a><ul>
+<li><a class="reference" href="#nabu-is-not" id="id12" name="id12">Nabu is not ...</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#documentation" id="id14" name="id14">Documentation</a><ul>
-<li><a class="reference" href="#for-content-writers" id="id15" name="id15">For Content Writers</a></li>
-<li><a class="reference" href="#technical" id="id16" name="id16">Technical</a></li>
-<li><a class="reference" href="#design" id="id17" name="id17">Design</a></li>
-<li><a class="reference" href="#test-drive-nabu" id="id18" name="id18">Test Drive Nabu</a></li>
+<li><a class="reference" href="#documentation" id="id13" name="id13">Documentation</a><ul>
+<li><a class="reference" href="#for-content-writers" id="id14" name="id14">For Content Writers</a></li>
+<li><a class="reference" href="#technical" id="id15" name="id15">Technical</a></li>
+<li><a class="reference" href="#design" id="id16" name="id16">Design</a></li>
+<li><a class="reference" href="#test-drive-nabu" id="id17" name="id17">Test Drive Nabu</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#download" id="id19" name="id19">Download</a></li>
-<li><a class="reference" href="#reporting-bugs" id="id20" name="id20">Reporting Bugs</a></li>
-<li><a class="reference" href="#links" id="id21" name="id21">Links</a></li>
-<li><a class="reference" href="#installation-and-dependencies" id="id22" name="id22">Installation and Dependencies</a></li>
-<li><a class="reference" href="#copyright-and-license" id="id23" name="id23">Copyright and License</a></li>
-<li><a class="reference" href="#acknowledgements" id="id24" name="id24">Acknowledgements</a></li>
-<li><a class="reference" href="#author" id="id25" name="id25">Author</a></li>
+<li><a class="reference" href="#download" id="id18" name="id18">Download</a></li>
+<li><a class="reference" href="#reporting-bugs" id="id19" name="id19">Reporting Bugs</a></li>
+<li><a class="reference" href="#links" id="id20" name="id20">Links</a></li>
+<li><a class="reference" href="#installation-and-dependencies" id="id21" name="id21">Installation and Dependencies</a></li>
+<li><a class="reference" href="#copyright-and-license" id="id22" name="id22">Copyright and License</a></li>
+<li><a class="reference" href="#acknowledgements" id="id23" name="id23">Acknowledgements</a></li>
+<li><a class="reference" href="#author" id="id24" name="id24">Author</a></li>
 </ul>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id5" id="description" name="description">Description</a></h1>
+<h1><a class="toc-backref" href="#id4" id="description" name="description">Description</a></h1>
 <p>Assuming that a user can easily create text documents --this is the case for
 most programmers and techies, we do this all day, and we all have our favourite
 text editors-- this system allows you to store various kinds of data <em>across</em>
@@ -79,7 +79,7 @@ present the extracted data in the way that you prefer.</p>
 </div>
 <p>It is probably best illustrated by some examples...</p>
 <div class="section">
-<h2><a class="toc-backref" href="#id6" id="example-extracting-contact-info" name="example-extracting-contact-info">Example: Extracting Contact Info</a></h2>
+<h2><a class="toc-backref" href="#id5" id="example-extracting-contact-info" name="example-extracting-contact-info">Example: Extracting Contact Info</a></h2>
 <p>For example, imagine that you write several files about your travels, say, one
 for each destination.  Most likely they contain various contact information.
 You could insert them like this in any of your text files and they would
@@ -94,7 +94,7 @@ automatically be extracted to a global list of contact info:</p>
 birthday notification system for yourself by adding your birth date.</p>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id7" id="example-blogging-system" name="example-blogging-system">Example: Blogging System</a></h2>
+<h2><a class="toc-backref" href="#id6" id="example-blogging-system" name="example-blogging-system">Example: Blogging System</a></h2>
 <p>Another example: you could easily build a blogging system by detecting documents
 with certain bibliographic fields and a date at the top of document, for
 example:</p>
@@ -118,7 +118,7 @@ mentioned above.</p>
 </div>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id8" id="example-automatic-bookmarks-list" name="example-automatic-bookmarks-list">Example: Automatic Bookmarks List</a></h2>
+<h2><a class="toc-backref" href="#id7" id="example-automatic-bookmarks-list" name="example-automatic-bookmarks-list">Example: Automatic Bookmarks List</a></h2>
 <p>Another idea: you could automatically extract all the URLs from the documents
 pushed to the server (across <em>all</em> the files) and automatically build an online
 RSS bookmarks feeder, where your bookmarks would be organized by keywords, maybe
@@ -126,7 +126,7 @@ even fetching the keywords in the respective documents from which they were
 extracted.</p>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id9" id="example-shared-events-calendar" name="example-shared-events-calendar">Example: Shared Events Calendar</a></h2>
+<h2><a class="toc-backref" href="#id8" id="example-shared-events-calendar" name="example-shared-events-calendar">Example: Shared Events Calendar</a></h2>
 <p>How about this one: I maintain a todo file in a text file, simply.  With a
 simple convention, like:</p>
 <pre class="literal-block">
@@ -153,7 +153,7 @@ organize information online.</p>
 </div>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id10" id="customizability-writing-extractors" name="customizability-writing-extractors">Customizability: Writing Extractors</a></h2>
+<h2><a class="toc-backref" href="#id9" id="customizability-writing-extractors" name="customizability-writing-extractors">Customizability: Writing Extractors</a></h2>
 <p>Various simple extractors will come with the Nabu package itself, but we suspect
 you will very soon want to write your own.  Writing extractors is very easy.</p>
 <p>All of this is built using the very powerful <a class="reference" href="http://docutils.sourceforge.net">docutils</a> tools, which includes the
@@ -162,8 +162,8 @@ source documents.  Extractors are simply docutils transforms that visit the
 document structure (which is provided and saved by the Nabu system).  To add a
 new type of entry, all you need to do is write code that visits the tree, finds
 what you want, and write a simple object to store it in the way you prefer.  You
-can use SQLObject or another library to store the data in a database or in text
-files.</p>
+can use any system you like to store the data in a database or in text files
+(SQL DBAPI, an ORM, files, ...).</p>
 <div class="note">
 <p class="first admonition-title">Note</p>
 <p class="last">At the moment I have not had time to write complex extractors yet, due to
@@ -175,7 +175,7 @@ provide them.</p>
 </div>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id11" id="target-audience" name="target-audience">Target Audience</a></h2>
+<h2><a class="toc-backref" href="#id10" id="target-audience" name="target-audience">Target Audience</a></h2>
 <p>This system is made to be a simple as possible to use.  However, it is not
 designed for your mother.  In order to be able to use this efficiently, you must</p>
 <ol class="arabic simple">
@@ -189,7 +189,7 @@ computers.</p>
 </div>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id12" id="features" name="features">Features</a></h1>
+<h1><a class="toc-backref" href="#id11" id="features" name="features">Features</a></h1>
 <p>Nabu is cool, because:</p>
 <ul>
 <li><p class="first">it is flexible: you can use</p>
@@ -239,7 +239,7 @@ The client only requires Python to work;</p>
 </li>
 </ul>
 <div class="section">
-<h2><a class="toc-backref" href="#id13" id="nabu-is-not" name="nabu-is-not">Nabu is not ...</a></h2>
+<h2><a class="toc-backref" href="#id12" id="nabu-is-not" name="nabu-is-not">Nabu is not ...</a></h2>
 <dl class="docutils">
 <dt>Not a Wiki</dt>
 <dd>Although we upload documents (like Wiki pages) to a server, it may
@@ -283,15 +283,15 @@ call it &quot;Nabu&quot;.</p>
 </div>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id14" id="documentation" name="documentation">Documentation</a></h1>
+<h1><a class="toc-backref" href="#id13" id="documentation" name="documentation">Documentation</a></h1>
 <div class="section">
-<h2><a class="toc-backref" href="#id15" id="for-content-writers" name="for-content-writers">For Content Writers</a></h2>
+<h2><a class="toc-backref" href="#id14" id="for-content-writers" name="for-content-writers">For Content Writers</a></h2>
 <ul class="simple">
 <li><a class="reference" href="doc/nabu-usage.html">Usage</a>: usage instructions for content pushers;</li>
 </ul>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id16" id="technical" name="technical">Technical</a></h2>
+<h2><a class="toc-backref" href="#id15" id="technical" name="technical">Technical</a></h2>
 <ul class="simple">
 <li><a class="reference" href="doc/nabu-server.html">Server Setup</a>: instructions for installing and
 configuring a Nabu server;</li>
@@ -306,7 +306,7 @@ provide;</li>
 </ul>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id17" id="design" name="design">Design</a></h2>
+<h2><a class="toc-backref" href="#id16" id="design" name="design">Design</a></h2>
 <ul class="simple">
 <li><a class="reference" href="doc/nabu-goals.html">Goals</a>: motivation behind this project, history of
 what led me to implement this;</li>
@@ -316,14 +316,14 @@ that I would like to do that is not on the immediate list;</li>
 </ul>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id18" id="test-drive-nabu" name="test-drive-nabu">Test Drive Nabu</a></h2>
+<h2><a class="toc-backref" href="#id17" id="test-drive-nabu" name="test-drive-nabu">Test Drive Nabu</a></h2>
 <ul class="simple">
 <li><a class="reference" href="doc/nabu-beta.html">Test Drive</a>: test drive Nabu on our server;</li>
 </ul>
 </div>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id19" id="download" name="download">Download</a></h1>
+<h1><a class="toc-backref" href="#id18" id="download" name="download">Download</a></h1>
 <p>You can download the <a class="reference" href="/nabu/bin/nabu">Nabu Publisher Client</a> and save it under the name
 <tt class="docutils literal"><span class="pre">nabu</span></tt>.  Usage instructions can be found <a class="reference" href="doc/nabu-usage.html">here</a>.</p>
 <p>Snapshots of the latest Nabu source code can be found in the <a class="reference" href="/downloads/nabu">Download Area</a>.  It consists mostly of server code, but it also contains
@@ -341,11 +341,11 @@ on personal projects (works for me), and I'm committed to fix bugs reported by
 others.  When I get some feedback I will select version number (probably 1.0).</p>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id20" id="reporting-bugs" name="reporting-bugs">Reporting Bugs</a></h1>
+<h1><a class="toc-backref" href="#id19" id="reporting-bugs" name="reporting-bugs">Reporting Bugs</a></h1>
 <p>Send email to the author: Martin Blais &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;.</p>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id21" id="links" name="links">Links</a></h1>
+<h1><a class="toc-backref" href="#id20" id="links" name="links">Links</a></h1>
 <p>Some links to projects with similar goals, or that have some kind of conceptual
 relation:</p>
 <ul class="simple">
@@ -353,7 +353,7 @@ relation:</p>
 </ul>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id22" id="installation-and-dependencies" name="installation-and-dependencies">Installation and Dependencies</a></h1>
+<h1><a class="toc-backref" href="#id21" id="installation-and-dependencies" name="installation-and-dependencies">Installation and Dependencies</a></h1>
 <dl class="docutils">
 <dt>Nabu Publisher Client</dt>
 <dd><p class="first">A single file written in Python.</p>
@@ -379,8 +379,9 @@ server, you must have:</p>
 <ul class="last simple">
 <li><a class="reference" href="http://python.org">Python-2.4</a> or greater;</li>
 <li><a class="reference" href="http://docutils.sourceforge.net">docutils</a>;</li>
-<li>if you use a database backend: <a class="reference" href="http://sqlobject.org">SQLObject</a> and a
-supported wrapper for your database;</li>
+<li>if you use a database backend, whatever SQL DBAPI connector.
+Right now the application works using pyscopg2, but it could be ported very
+easily to another DBAPI-2.0 connector object, or to write to files.</li>
 </ul>
 </dd>
 <dt>Presentation Layer</dt>
@@ -396,12 +397,12 @@ database.</p>
 </dl>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id23" id="copyright-and-license" name="copyright-and-license">Copyright and License</a></h1>
+<h1><a class="toc-backref" href="#id22" id="copyright-and-license" name="copyright-and-license">Copyright and License</a></h1>
 <p>Copyright (C) 2005  Martin Blais.
 This code is distributed under the <a class="reference" href="COPYING">GNU General Public License</a>.</p>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id24" id="acknowledgements" name="acknowledgements">Acknowledgements</a></h1>
+<h1><a class="toc-backref" href="#id23" id="acknowledgements" name="acknowledgements">Acknowledgements</a></h1>
 <p>This project uses two important libraries to do its thing:</p>
 <ul class="simple">
 <li>the <a class="reference" href="http://docutils.sourceforge.net">Docutils</a> project (written mostly by
@@ -409,13 +410,11 @@ Dave Goodger), which provides the reStructuredText parser, the internal
 document structure, and the HTML writer (and more).  Docutils is a major
 facilitator for this system--without it this idea probably would not have seen
 the light of day;</li>
-<li>the <a class="reference" href="http://sqlobject.org">SQLObject</a> library (written by Ian Bicking),
-which provides easier access to SQL storage.</li>
 </ul>
 <p>It is also built in the Python language.</p>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id25" id="author" name="author">Author</a></h1>
+<h1><a class="toc-backref" href="#id24" id="author" name="author">Author</a></h1>
 <p>Martin Blais &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;</p>
 <!-- "Text files are forever" -->
 <!-- - -Martin -->
